// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocaleParamPipe should transform campanda locale params properly 1`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 2`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 3`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 4`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 5`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 6`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 7`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 8`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 9`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 10`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 11`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 12`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 13`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 14`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 15`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 16`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 17`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform campanda locale params properly 18`] = `
Object {
  "lang": "de",
  "locale": "de_DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 1`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 2`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 3`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 4`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 5`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 6`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 7`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 8`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 9`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 10`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 11`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 12`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 13`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;

exports[`LocaleParamPipe should transform erento locale params properly 14`] = `
Object {
  "lang": "de",
  "locale": "de-DE",
  "original": "",
  "territory": "DE",
}
`;
